# PhysicsEngine

./: CMakeLists.txt
include/: ForceGenerator.h  GravityForce.h  Particle.h  Renderer.h  Vector2D.h
src/: GravityForce.cpp  Particle.cpp  Renderer.cpp  Vector2D.cpp
tests/: gravity_test.cpp  physics_test.cpp  renderer_test.cpp  sfml_test.cpp
